changed color and made some edits

--- a/HTML/HowToFuckYourWife/index.html
+++ b/HTML/HowToFuckYourWife/index.html
@@ -9,7 +9,7 @@
 		#main-header{
 			text-align: center;
 			background-color: black;
-			color: green;
+			color: yellow;
 			padding: 10px;
 			font-size: 25px;
 		}
@@ -34,7 +34,7 @@
 	<h3>Step 2: start the foreplay</h3>
 
 	<!-- Paragraph -->
-	<p>start the foreplay after undoing her clothes, try warming up her a little bit to increase the blood circulation at specific parts. I suggest start by kissing her lips, rubbing her neck and then slowly moving downwards playing with her boobs and kissing her belly. Proceed slowly and start pleasuring her vagina try to ask her before stimulating her clitoris, use your tongue if you are comfortable. and let her do her part and use lubricants if you want</p>
+	<p>start the foreplay after undoing her clothes, try warming up her a little bit to increase the blood circulation at specific parts. I suggest start by kissing her lips, rubbing her neck and then slowly moving downwards playing with her boobs and kissing her belly. Proceed slowly and start pleasuring her vagina try to ask her before stimulating her clitoris, use your tongue if you are comfortable. Let her do her part and use lubricants if you want</p>
 
 	<!--Heading-->
 	<h3>Step 3: Fuck her like You are her boss</h3>
